* Fixed sketch URL to solve problems in windows